@@ -16,17 +16,28 @@ jobs:
         echo 'eval "$(pyenv init --path)"' >> ~/.bashrc
         echo 'eval "$(pyenv virtualenv-init -)"' >> ~/.bashrc
         source ~/.bashrc
+
+    - name: Update pip
+      run: |
+        python -m pip install --upgrade pip
+
+    - name: Install poetry
+      run: |
+        pip install poetry
+        poetry config installer.max-workers 10
+        poetry config virtualenvs.create false
+
     - name: Checkout the package
       uses: actions/checkout@v2
 
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-        pip install -r requirements-dev.txt
+        poetry install --only=main,dev
+
     - name: Generate static files
       run: |
         make doc
+
     - name: Deploy to GH Pages 🚀
       uses: peaceiris/actions-gh-pages@v3
       with:
