@@ -1,4 +1,14 @@
-### Disable the logger (HEAD -> refactoring)
+### Update github workflow (HEAD -> refactoring)
+>Thu, 22 May 2025 05:53:43 +0200
+
+>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)
+
+>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)
+
+
+
+
+### Disable the logger
 >Thu, 22 May 2025 05:53:08 +0200
 
 >Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)
